fix some of the export errors

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(format_perc)
 export(nice_date)
 export(pull_figures)
 export(pull_tables)
+export(siground)
 export(wake_cols)
 export(wake_secondary)
 importFrom(fs,dir_ls)
