Lots of JW updates. See NEWS for v 0.0.1.0009

--- a/inst/rmarkdown/templates/idreport/template.yaml
+++ b/inst/rmarkdown/templates/idreport/template.yaml
@@ -1,4 +1,4 @@
-name: Infectious Diseases Report
+name: Infectious Diseases Word Document Report
 description: >
- Template for creating a report
+ Template for creating a docx report
 create_dir: false
