--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,17 +1,34 @@
 Package: idstyle
-Title: Providing Formatting Tools for ID Research Presentation
-Version: 0.0.1
+Title: Providing Templates, Branding, and Style Tools for ID Research Presentation
+Version: 0.0.1.9000
 Authors@R: 
-    person("Michael", "DeWitt", , "medewitt@wakehealth.edu", role = c("aut", "cre"),
-           comment = c(ORCID = "0000-0001-8940-1967"))
-Description: Provides helpful tools for formatting and presenting infectious
-    disease research at Wake Forest University School of Medicine.
+    c(person("Michael", "DeWitt", , "medewitt@wakehealth.edu", role = c("aut", "cre"),
+           comment = c(ORCID = "0000-0001-8940-1967")),
+      person("Jennifer", "Wenner", , "jwenner@wakehealth.edu", role = c("aut"),
+           comment = c(ORCID = "0009-0002-6708-8847")))
+Description: Provides helpful tools for branding and styling, as well as 
+    project templates (file structure, R output templates) for consistency 
+    and simplification of work flow used for infectious disease research at Wake 
+    Forest University School of Medicine.
 License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.1.2
+RoxygenNote: 7.2.3
 Imports: 
     flextable,
     fs,
     here,
-    purrr
+    purrr,
+    rstudioapi,
+    usethis,
+    cli,
+    bslib,
+    magrittr,
+    idtools
+Remotes:
+    wf-id/idtools
+Enhances: 
+    thematic
+Suggests: 
+    testthat (>= 3.0.0)
+Config/testthat/edition: 3
