--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: idstyle
 Title: Providing Templates, Branding, and Style Tools for ID Research Presentation
-Version: 0.0.3
+Version: 0.0.4
 Authors@R: 
     c(person("Michael", "DeWitt", , "medewitt@wakehealth.edu", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0001-8940-1967")),
@@ -15,6 +15,7 @@ Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
 Imports: 
+    rlang,
     flextable,
     fs,
     here,
@@ -23,11 +24,19 @@ Imports:
     usethis,
     cli,
     bslib,
-    idtools
+    idtools,
+    ggplot2,
+    gtsummary,
+    sysfonts,
+    dplyr,
+    showtext,
+    htmlwidgets,
+    htmltools
 Remotes:
     wf-id/idtools
 Enhances: 
-    thematic
+    thematic,
+    ggtext
 Suggests: 
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
