v 0.0.6 theme_id() with colorblind safe palettes now default; theme_wake() still available; continuous scales bug fix

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,27 +20,38 @@ export(make_project)
 export(nice_date)
 export(palette_set_atrium)
 export(palette_set_gg)
+export(palette_set_id)
 export(palette_set_wake)
 export(pull_figures)
 export(pull_tables)
 export(register_font_awesome)
-export(scale_continuous_atrium)
-export(scale_continuous_wake)
-export(scale_continuous_wake_atrium)
+export(scale_color_continuous_atrium)
+export(scale_color_continuous_id)
+export(scale_color_continuous_wake)
+export(scale_color_continuous_wake_atrium)
 export(scale_discrete_atrium)
+export(scale_discrete_id)
 export(scale_discrete_wake)
+export(scale_fill_continuous_atrium)
+export(scale_fill_continuous_id)
+export(scale_fill_continuous_wake)
+export(scale_fill_continuous_wake_atrium)
 export(siground)
 export(theme_atrium)
 export(theme_atrium_elements)
 export(theme_atrium_facet)
+export(theme_id)
+export(theme_id_facet)
 export(theme_set_atrium)
 export(theme_set_gg)
+export(theme_set_id)
 export(theme_set_wake)
 export(theme_wake)
 export(theme_wake_elements)
 export(theme_wake_facet)
 export(update_geoms_atrium)
 export(update_geoms_gg)
+export(update_geoms_id)
 export(update_geoms_wake)
 export(useWakeCss)
 export(wake_all_colors)
