--- a/inst/quarto/id/_extensions/id/_extension.yml
+++ b/inst/quarto/id/_extensions/id/_extension.yml
@@ -4,11 +4,24 @@ version: 1.0.0
 quarto-required: ">=1.3.0"
 contributes:
   format:
+    dashboard:
+      theme: [cosmo, theme.scss]
+      include-after-body: footer-dash.html
+      include-in-header:
+        - header-dash.html
+        - text: |
+            <link rel = "shortcut icon" href = "favicon.ico" />
+      number-sections: false
+      nav-buttons:
+        - icon: github
+          href: https://github.com/wf-id
     common:
       toc: true
       number-sections: true
       number-depth: 3
       df-print: kable
+      favicon: assets/favicon.ico
+      logo: assets/favicon.png
       csl: https://raw.githubusercontent.com/citation-style-language/styles/master/apa-numeric-superscript-brackets.csl
     html:
       toc-title: Contents
@@ -19,6 +32,8 @@ contributes:
       include-in-header:
         # - back-to-top.html
         - header.html
+        - text: |
+            <link rel = "shortcut icon" href = "favicon.ico" />
       include-after-body: footer.html
       link-external-icon: false
       link-external-newwindow: true
