--- a/NAMESPACE
+++ b/NAMESPACE
@@ -30,8 +30,10 @@ export(scale_color_continuous_id)
 export(scale_color_continuous_wake)
 export(scale_color_continuous_wake_atrium)
 export(scale_discrete_atrium)
+export(scale_discrete_atrium2)
 export(scale_discrete_id)
 export(scale_discrete_wake)
+export(scale_discrete_wake2)
 export(scale_fill_continuous_atrium)
 export(scale_fill_continuous_id)
 export(scale_fill_continuous_wake)
