--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,7 @@ export(palette_set_wake)
 export(pull_figures)
 export(pull_tables)
 export(register_font_awesome)
+export(remove_plotly_dups)
 export(scale_color_continuous_atrium)
 export(scale_color_continuous_id)
 export(scale_color_continuous_wake)
